footer align fix

--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -79,7 +79,7 @@
     }
 
     .footer{
-        // position: fixed; 
+        position: fixed; 
         right: 0;
         bottom: 0;
         left: 0;
